[gd_scene load_steps=10 format=3 uid="uid://bpdjx6jlmbm74"]

[ext_resource type="Script" path="res://GameOverScreen.gd" id="1_lyfv7"]
[ext_resource type="Shader" path="res://game_over_screen.gdshader" id="2_gmjqt"]
[ext_resource type="FontFile" uid="uid://b1dyomvma53nt" path="res://PixelifySans-Regular.ttf" id="3_igmj8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jtfd"]
bg_color = Color(0.705882, 0.560784, 0.541176, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.964706, 0.772549, 0.270588, 1)
shadow_color = Color(0.709804, 0, 0, 0.6)
shadow_size = 21

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2hha2"]
shader = ExtResource("2_gmjqt")
shader_parameter/height = 10.0
shader_parameter/speed = 5.0
shader_parameter/frequency = 10.0

[sub_resource type="Animation" id="Animation_maf33"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_suck6"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0e2l4"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ymi5b"]
_data = {
"RESET": SubResource("Animation_maf33"),
"fade_in": SubResource("Animation_suck6"),
"fade_out": SubResource("Animation_0e2l4")
}

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_lyfv7")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7jtfd")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 7.02
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Rows"]
material = SubResource("ShaderMaterial_2hha2")
layout_mode = 2
theme_override_fonts/font = ExtResource("3_igmj8")
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 2

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_igmj8")
theme_override_font_sizes/font_size = 30
text = "RESTART"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_igmj8")
theme_override_font_sizes/font_size = 30
text = "EXIT"

[node name="transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ymi5b")
}

[node name="ColorRect" type="ColorRect" parent="transition"]
visible = false
show_behind_parent = true
top_level = true
offset_left = -12.0
offset_top = -14.0
offset_right = 1171.0
offset_bottom = 660.0
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="transition" to="." method="_on_transition_animation_finished"]
